# bebop_sim_rl

bebop_gazebo/: CMakeLists.txt  package.xml
bebop_gazebo/config/saves/training_weights/uav_vel_obs_gazebo1pcd/ddpg_weights/: QWeights.pth  TargetQWeights.pth  TargetactorWeights.pth  actorWeights.pth
bebop_gazebo/config/saves/training_weights/uav_vel_obs_gazebo1pcd/td3_weights/: TargetactorWeights.pth  actorWeights.pth
bebop_gazebo/launch/: bebop_empty_world.launch  bebop_moving_helipad.launch  rl_bebop_spawn.launch  spawn_bebop.launch
bebop_gazebo/models/world/: model.config  obs_two_world.sdf
bebop_gazebo/src/: floatie.py  get_pc.py  plugin.cpp  test_env.py  test_rl.py  train_rl.py  velocity.pkl
bebop_gazebo/src/config/saves/rl_rewards/: DDPG.pkl  IDEA4.pkl  RCRL.pkl  SAAC.pkl  SAC.pkl  SEditor.pkl  SoftQ.pkl  TD3.pkl  USL.pkl
bebop_gazebo/src/config/saves/rl_rewards/UAM/: DDPG.pkl  SAC.pkl  SoftQ.pkl
bebop_gazebo/src/config/saves/rl_rewards/quadrotor/: SoftQ.pkl
bebop_gazebo/src/config/saves/training_weights/UAM/ddpg_weights/: TargetactorWeights.pth  actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM/idea4_weights/: actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM/sac_weights/: TargetVWeights.pth  VWeights.pth  actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM/softq_weights/: TargetactorWeights.pth  actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM/teacher_weights/: DDPG_alp_gmm.pkl  SAAC_alp_gmm.pkl
bebop_gazebo/src/config/saves/training_weights/UAM_obs/ddpg_usl_weights/: actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM_obs/ddpg_weights/: TargetactorWeights.pth  actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM_obs/saac_weights/: actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM_obs/softq_weights/: actorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM_obs/td3_weights/: TargetactorWeights.pth
bebop_gazebo/src/config/saves/training_weights/UAM_obs/teacher_weights/: RCRL_alp_gmm.pkl  SoftQ_alp_gmm.pkl  TD3_alp_gmm.pkl  USL_alp_gmm.pkl
bebop_gazebo/src/rl_aerial_manipulation/agent/: DDPG.py  IDEA1.py  IDEA2.py  IDEA3.py  IDEA4.py  SAAC.py  SAC.py  SoftQ.py  TD3.py  USL.py
bebop_gazebo/src/rl_aerial_manipulation/controllers/: PID.py
bebop_gazebo/src/rl_aerial_manipulation/environment/: ControlQuadrotoEnv.py
bebop_gazebo/src/rl_aerial_manipulation/environment/Dynamics/: Manipulator.py  Quadrotor.py
bebop_gazebo/src/rl_aerial_manipulation/environment/Dynamics/UAM/: Cmatrix.py  UAM.py
bebop_gazebo/src/rl_aerial_manipulation/environment/GazeboEnv/Quadrotor/: BaseGazeboUAVEnv.py  BaseGazeboUAVObsEnv.py  BaseGazeboUAVVelEnv.py  BaseGazeboUAVVelObsEnv.py  BaseGazeboUAVVelObsEnv1.py  BaseGazeboUAVVelObsEnv1PCD.py
bebop_gazebo/src/rl_aerial_manipulation/environment/PyBulletEnv/Quadrotor/: BaseUAVEnv.py
bebop_gazebo/src/rl_aerial_manipulation/environment/PyBulletEnv/UAM/: BaseUAMEnv.py
bebop_gazebo/src/rl_aerial_manipulation/environment/Quadrotor/: BaseQuadrotorEnv.py  QuadrotorObsEnv.py  QuadrotorTeachEnv.py
bebop_gazebo/src/rl_aerial_manipulation/teacher/Methods/: AlpGMM.py
bebop_gazebo/src/scripts/: main.py  move_uav.py  subscriber.py
bebop_gazebo/srv/: RequestUavPose.srv
bebop_gazebo/urdf/: bebop.urdf  bebop_base.urdf.xacro
(+62 files in other folders)
