<?xml version="1.0"?>
<package format="2">
  <name>bebop_gazebo</name>
  <version>0.0.0</version>
  <description>The bebop_gazebo package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">gstavrinos</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>tf2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>hector_quadrotor_actions</build_depend>
  <build_depend>hector_quadrotor_interface</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>gazebo</build_depend>

  
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_to_tf</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_uav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_sensors_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hector_quadrotor_actions</exec_depend>
  <exec_depend>hector_quadrotor_interface</exec_depend>
  <exec_depend>hector_quadrotor_gazebo_plugins</exec_depend>
  <exec_depend>hector_quadrotor_controller_gazebo</exec_depend>
  <exec_depend>laser_assembler</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
